Fix project container wrapping on /platform
Prior to this commit, project containers on the /platform page wrapped
incorrectly on Firefox. This change adds a Gecko-specific CSS rule[1] to
prevent this behavior.

Changes are based on pull request #66.

[1]: http://stackoverflow.com/questions/3123063/what-does-moz-document-url-prefix-do

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1390,6 +1390,11 @@ form.lpeRegForm .mktInput {
   width: 24.153%;
   margin: 40px 1% 40px 0;
 }
+@-moz-document url-prefix() {
+  .platform-project .project--container {
+    width: 22%;
+  }
+}
 .platform-project .project--container:last-child {
   margin-right: 0;
 }
